Desenvolvida criação de posts com upload de arquivo.