@@ -1,11 +1,16 @@
 package scheper.mateus.service;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 import scheper.mateus.dto.ComentarioDTO;
 import scheper.mateus.dto.NovoComentarioDTO;
 import scheper.mateus.dto.NovoPostDTO;
 import scheper.mateus.dto.PostDTO;
 import scheper.mateus.dto.ReacaoDTO;
+import scheper.mateus.entity.Arquivo;
 import scheper.mateus.entity.Comentario;
 import scheper.mateus.entity.Post;
 import scheper.mateus.entity.Usuario;
@@ -15,10 +20,15 @@ import scheper.mateus.repository.PostRepository;
 import scheper.mateus.repository.UsuarioRepository;
 import scheper.mateus.utils.NumberUtils;
 
+import javax.persistence.Transient;
+import javax.servlet.http.HttpServletRequest;
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static scheper.mateus.utils.ValidatorUtils.validarNulo;
 
@@ -31,10 +41,13 @@ public class PostService {
 
     private final ComentarioRepository comentarioRepository;
 
-    public PostService(PostRepository postRepository, UsuarioRepository usuarioRepository, ComentarioRepository comentarioRepository) {
+    private final HttpServletRequest request;
+
+    public PostService(PostRepository postRepository, UsuarioRepository usuarioRepository, ComentarioRepository comentarioRepository, HttpServletRequest request) {
         this.postRepository = postRepository;
         this.usuarioRepository = usuarioRepository;
         this.comentarioRepository = comentarioRepository;
+        this.request = request;
     }
 
 
@@ -50,13 +63,89 @@ public class PostService {
         return posts;
     }
 
-    public void save(NovoPostDTO novoPostDTO) {
+    @Transient
+    public void save(String dadosPost, MultipartFile imagem) {
+        NovoPostDTO novoPostDTO = obterNovoPostDTODoRequest(dadosPost);
+        Usuario criador = obterUsuario(novoPostDTO.getIdUsuario());
+
         Post post = new Post();
-        post.setCriador(obterUsuario(novoPostDTO.getIdUsuario()));
+        post.setCriador(criador);
         post.setCriacao(LocalDateTime.now());
         post.setDescricao(novoPostDTO.getDescricao());
 
+        if (imagem != null && !imagem.isEmpty()) {
+            File arquivoUpado = uparArquivoServidor(imagem);
+            Arquivo arquivo = criarArquivo(arquivoUpado, criador);
+            post.getArquivos().add(arquivo);
+        }
+
         postRepository.save(post);
+    }
+
+    private File uparArquivoServidor(MultipartFile arquivo) {
+        try {
+            String pastaUpload = System.getProperty("user.home") + separator() + "uploads" + separator();
+
+            if (!new File(pastaUpload).exists()) {
+                new File(pastaUpload).mkdir();
+            }
+
+            String nomeArquivo = arquivo.getOriginalFilename();
+            String caminhoCompletoArquivo = pastaUpload + nomeArquivo;
+            File arquivoReal = new File(caminhoCompletoArquivo);
+            arquivo.transferTo(arquivoReal);
+
+            return arquivoReal;
+        } catch (IOException e) {
+            throw new UsuarioBusinessException("Arquivo inválido.");
+        }
+    }
+
+    private String separator() {
+        String separator = System.getProperty("file.separator");
+        if (StringUtils.isEmpty(separator)) {
+            return "/";
+        }
+        return separator;
+    }
+
+    private Arquivo criarArquivo(File imagem, Usuario usuario) {
+        try {
+            String nomeArquivo = imagem.getName();
+
+            Arquivo arquivo = new Arquivo();
+            arquivo.setDono(usuario);
+            arquivo.setNome(nomeArquivo);
+            arquivo.setCaminho(imagem.getCanonicalPath());
+            arquivo.setTipo(nomeArquivo.substring(nomeArquivo.lastIndexOf(".") + 1));
+            arquivo.setTamanho(Files.size(Path.of(imagem.getAbsolutePath())));
+
+            return arquivo;
+        } catch (IOException e) {
+            throw new UsuarioBusinessException("Arquivo inválido.");
+        }
+    }
+
+    private NovoPostDTO obterNovoPostDTODoRequest(String post) {
+        if (StringUtils.isEmpty(post)) {
+            throw new UsuarioBusinessException("Dados inválidos.");
+        }
+
+        ObjectMapper mapper = new ObjectMapper();
+        NovoPostDTO novoPostDTO;
+        try {
+            novoPostDTO = mapper.readValue(post, NovoPostDTO.class);
+        } catch (JsonProcessingException e) {
+            throw new UsuarioBusinessException("Dados inválidos.");
+        }
+
+        validarNovoPost(novoPostDTO);
+
+        return novoPostDTO;
+    }
+
+    private void validarNovoPost(NovoPostDTO novoPostDTO) {
+        validarNulo(novoPostDTO.getIdUsuario(), "ID de usuário inválida.");
     }
 
     private Usuario obterUsuario(Long idUsuario) {
@@ -113,6 +202,6 @@ public class PostService {
         return comentariosDTO
                 .stream()
                 .map(ComentarioDTO::getIdComentario)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
